Introduced new API "scadenzaDocumenti" interfaces.
Renamed DocumentTTLClientCall.java class.
